finalizando os codigos

--- a/necessi.html
+++ b/necessi.html
@@ -12,14 +12,14 @@
     <header class="header">
         <a href="#inicio">
             <img src="img/Logo astrynx.png" alt="ASTRYNX Logo" class="logo-image">
-            
+
         </a>
         <nav class="nav">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                 <li><a href="sobre.html">Sobre</a></li>
-                 <li><a href="contatos.html">Contatos</a></li>
-                 <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="index.html">INÍCIO</a></li>
+                 <li><a href="sobre.html">SOBRE</a></li>
+                 <li><a href="contatos.html">CONTATOS</a></li>
+                 <li><a href="servicos.html">SERVIÇOS</a></li>
             </ul>
         </nav>
     </header>
@@ -39,19 +39,19 @@
                 <div class="detail-card">
                     <div class="icon-box"><i class="fas fa-search"></i></div>
                     <h3>Análise do Objetivo</h3>
-                    <p>Analisamos minuciosamente o seu **objetivo central**. O que precisa ser alcançado e qual o resultado de negócio esperado.</p>
+                    <p>Analisamos minuciosamente o seu objetivo central. O que precisa ser alcançado e qual o resultado de negócio esperado.</p>
                 </div>
 
                 <div class="detail-card">
                     <div class="icon-box"><i class="fas fa-cogs"></i></div>
                     <h3>Identificação de Soluções</h3>
-                    <p>Identificamos as **ferramentas, sistemas ou integrações** ideais para resolver o problema, evitando complexidade desnecessária.</p>
+                    <p>Identificamos as ferramentas, sistemas ou integrações ideais para resolver o problema, evitando complexidade desnecessária.</p>
                 </div>
 
                 <div class="detail-card">
                     <div class="icon-box"><i class="fas fa-lightbulb"></i></div>
                     <h3>Estratégia Inteligente</h3>
-                    <p>Focamos em soluções que garantam o resultado de forma mais **simples e inteligente** possível, maximizando o ROI.</p>
+                    <p>Focamos em soluções que garantam o resultado de forma mais simples e inteligente possível, maximizando o ROI.</p>
                 </div>
             </div>
         </div>
