--- a/sobre.html
+++ b/sobre.html
@@ -34,8 +34,7 @@
                  <div class="background-shape"></div>
                <div class="text-header">
                     <h1 class="main-title">Como funciona?</h1>
-                 <p class="subtitle">criada para transformar ideias em soluções digitais reais,
-                        com o propósito de desenvolver sistemas modernos, eficientes e personalizados.</p>
+                 <p class="subtitle">criada para transformar ideias em soluções digitais reais, Com o propósito de desenvolver sistemas modernos, eficientes e personalizados.</p>
                     </div>
 
                 <div class="features-grid">
@@ -55,9 +54,9 @@
                             <i class="fa-solid fa-bullseye"></i>
                              </div>
                         <h3>Entendimento das Necessidades</h3>
-                         <p>analisamos o seu objetivo. Identificamos quais ferramentas, sistemas
-                            ou integrações são ideapara resolver o problema da forma mais simples e inteligente
-                            possível.</p>
+                         <p> Analisamos o seu objetivo. Identificamos quais ferramentas, sistemas
+                            ou integrações são ideais para resolver o problema da forma mais simples e inteligente
+                            possível. </p>
                         
                          <a href="necessi.html" class="saiba-mais-btn">Saiba mais</a>
                         </div>
