--- a/visao.html
+++ b/visao.html
@@ -15,10 +15,10 @@
         </a>
         <nav class="nav">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                 <li><a href="sobre.html">Sobre</a></li>
-                 <li><a href="contatos.html">Contatos</a></li>
-                 <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="index.html">INÍCIO</a></li>
+                 <li><a href="sobre.html">SOBRE</a></li>
+                 <li><a href="contatos.html">CONTATOS</a></li>
+                 <li><a href="servicos.html">SERVIÇOS</a></li>
             </ul>
         </nav>
     </header>
