--- a/politica.html
+++ b/politica.html
@@ -21,7 +21,7 @@
     <!-- MENU SUPERIOR -->
     <header class="topo">
         <div class="logo">
-            <a href="index.html" aria-label="Página inicial">
+            <a href="contatos.html" aria-label="Página inicial">
                 <img src="img/Logo astrynx.png" alt="Logo Astrynx">
             </a>
         </div>
@@ -31,7 +31,7 @@
                 <li><a href="index.html">Início</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
-                <li><a href="contato.html">Contatos</a></li>
+                <li><a href="contatos.html">Contatos</a></li>
             </ul>
         </nav>
     </header>
