arrumando o merge e tambem arrumando todos os erros

--- a/contatos.html
+++ b/contatos.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Astrynx | Contatos</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/contatos.css">
 </head>
 
 <body>
@@ -17,10 +17,10 @@
     </div>
 
     <nav>
-        <a href="#">INÍCIO</a>
-        <a href="#">SOBRE</a>
-        <a href="#">SERVIÇOS</a>
-        <a href="#">CONTATOS</a>
+        <a href="index.html">INÍCIO</a>
+        <a href="sobre.html">SOBRE</a>
+        <a href="servicos.html">SERVIÇOS</a>
+        <a href="contatos.html">CONTATOS</a>
     </nav>
 </header>
 
@@ -51,8 +51,8 @@
 <footer>
     <div class="col">
         <h3>Astrynx</h3>
-        <a href="#">Sobre nós</a>
-        <a href="#">Serviços</a>
+        <a href="sobre.html">Sobre nós</a>
+        <a href="servicos.html">Serviços</a>
         <p>
     <a href="politica.html" target="_blank" href="css/politica.css">
         Política de Privacidade
