--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
 
         <nav class="menu">
-            <a href="#">INICIO</a>
-            <a href="#">SOBRE</a>
-            <a href="#">SERVIÇOS</a>
-            <a href="#">CONTATOS</a>
+            <a href="index.html">INICIO</a>
+            <a href="sobre.html">SOBRE</a>
+            <a href="servicos.html">SERVIÇOS</a>
+            <a href="contatos.html">CONTATOS</a>
         </nav>
     </header>
 
@@ -37,7 +37,7 @@
                 seu dia a dia, sempre com suporte dedicado e resultados consistentes.
             </p>
 
-            <a href="#" class="botao">SOBRE NÓS</a>
+            <a href="sobre.html" class="botao">SOBRE NÓS</a>
         </div>
 
         <div class="imagem">
