--- a/servicos.html
+++ b/servicos.html
@@ -15,10 +15,10 @@
         </div>
 
         <nav class="menu">
-            <a href="#">INICIO</a>
-            <a href="#">SOBRE</a>
-            <a href="#">SERVIÇOS</a>
-            <a href="#">CONTATOS</a>
+            <a href="index.html">INICIO</a>
+            <a href="sobre.html">SOBRE</a>
+            <a href="servicos.html">SERVIÇOS</a>
+            <a href="contatos.html">CONTATOS</a>
         </nav>
     </header>
 
