--- a/so.html
+++ b/so.html
@@ -16,9 +16,9 @@
 
     <nav class="menu">
         <a href="so.html">INÍCIO</a>
-        <a href="#">SOBRE</a>
+        <a href="contatos.html">SOBRE</a>
         <a href="servicos.html">SERVIÇOS</a>
-        <a href="#">CONTATOS</a>
+        <a href="contatos.html">CONTATOS</a>
     </nav>
 </header>
 
