--- a/ds.html
+++ b/ds.html
@@ -16,11 +16,11 @@
     </div>
 
     <nav class="menu">
-        <a href="so.html">INÍCIO</a>
-        <a href="#">SOBRE</a>
+        <a href="index.html">INÍCIO</a>
+        <a href="sobre.html">SOBRE</a>
         <a href="servicos.html">SERVIÇOS</a>
 
-        <a href="#">CONTATOS</a>
+        <a href="contatos.html">CONTATOS</a>
     </nav>
 </header>
 
