--- a/politica.html
+++ b/politica.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de Privacidade | Astrynx</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="css/politica.css"> 
 </head>
 
 <body>
@@ -13,6 +13,12 @@
         <div class="logo">
             <img src="img/Logo astrynx.png" alt="Astrynx Logo">
         </div>
+                <nav class="menu">
+            <a href="index.html">INICIO</a>
+            <a href="sobre.html">SOBRE</a>
+            <a href="servicos.html">SERVIÇOS</a>
+            <a href="contatos.html">CONTATOS</a>
+        </nav>
     </header>
 
     <div class="container">
