--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astrynx - Como Funciona</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/sobre.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -15,9 +15,9 @@
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="contatos.html">Contatos</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="sobre.html">SOBRE</a></li>
+                <li><a href="contatos.html">CONTATOS</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
             </ul>
         </nav>
@@ -29,7 +29,6 @@
                 <div class="background-shape"></div>
                 
                 <div class="text-header">
-                    <p class="crm-title">Astrynx</p>
                     <h1 class="main-title">Como funciona?</h1>
                     <p class="subtitle"> criada para transformar ideias em soluções digitais reais, com o propósito de desenvolver sistemas modernos, eficientes e personalizados.
 </p>
@@ -63,7 +62,7 @@
 
                 </div>
 
-                <a href="#" class="saiba-mais-btn">Saiba mais</a>
+                
 
             </div>
         </section>
